Refactor runtime error output logic